force-app/main/default/objects/Contract/fields/AddAgreementFSupplyOfBrandedGood__c.field-meta.xml
<CustomField>
    <fullName>AddAgreementFSupplyOfBrandedGood__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add.Agreement f. supply of branded goods</label>
    <type>Checkbox</type>
</CustomField>