force-app/main/default/objects/Contract/fields/AdSalesContractType__c.field-meta.xml
<CustomField>
    <fullName>AdSalesContractType__c</fullName>
    <label>AdSales Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AnnualContract</fullName>
                <label>Annual Contract</label>
            </value>
            <value>
                <fullName>AdditionToAnnualContract</fullName>
                <label>Addition to Annual Contract</label>
            </value>
            <value>
                <fullName>SingleBooking</fullName>
                <label>Single booking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>