force-app/main/default/objects/Contract/fields/AdSalesInvoiceSpecialities__c.field-meta.xml
<CustomField>
    <fullName>AdSalesInvoiceSpecialities__c</fullName>
    <label>AdSales Invoice specialities</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>