force-app/main/default/objects/Contract/fields/Backend__c.field-meta.xml
<CustomField>
    <fullName>Backend__c</fullName>
    <inlineHelpText>Choose the Backend via which the Merchant will connect to limango.</inlineHelpText>
    <label>Backend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mirakl</fullName>
            </value>
            <value>
                <fullName>Merchant Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>