force-app/main/default/objects/Contract/fields/BankAccountHolder__c.field-meta.xml
<CustomField>
    <fullName>BankAccountHolder__c</fullName>
    <label>Bank Account Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>