force-app/main/default/objects/Contract/fields/BankInstitution__c.field-meta.xml
<CustomField>
    <fullName>BankInstitution__c</fullName>
    <label>Bank Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>