force-app/main/default/objects/Contract/fields/BillingFrequency__c.field-meta.xml
<CustomField>
    <fullName>BillingFrequency__c</fullName>
    <label>Billing frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>monthly</fullName>
                <default>true</default>
                <label>Once per month</label>
            </value>
            <value>
                <fullName>biweekly</fullName>
                <label>Twice per month</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>