force-app/main/default/objects/Contract/fields/BLZ__c.field-meta.xml
<CustomField>
    <fullName>BLZ__c</fullName>
    <label>BLZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>