force-app/main/default/objects/Contract/fields/BusinessUnitAdSalesContract__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitAdSalesContract__c</fullName>
    <label>Business Unit AdSales Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>external</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>