force-app/main/default/objects/Contract/fields/Carrierhandovertime__c.field-meta.xml
<CustomField>
    <fullName>Carrierhandovertime__c</fullName>
    <label>Carrier handover time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>24h</fullName>
                <default>true</default>
                <label>24h</label>
            </value>
            <value>
                <fullName>48h</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>