force-app/main/default/objects/Contract/fields/ConnectionFee__c.field-meta.xml
<CustomField>
    <fullName>ConnectionFee__c</fullName>
    <label>Connection Fee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>499Euro</fullName>
                <label>499 Euro</label>
            </value>
            <value>
                <fullName>799Euro</fullName>
                <label>799 Euro</label>
            </value>
            <value>
                <fullName>no connection fee</fullName>
            </value>
            <value>
                <fullName>249,50Euro</fullName>
                <label>249,50 Euro</label>
            </value>
            <value>
                <fullName>399Euro</fullName>
                <label>399 Euro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>