force-app/main/default/objects/Contract/fields/ConnectionFeeCharged__c.field-meta.xml
<CustomField>
    <fullName>ConnectionFeeCharged__c</fullName>
    <label>Connection Fee charged</label>
    <type>Date</type>
</CustomField>