force-app/main/default/objects/Contract/fields/ConnectionFeeInterfaceChange__c.field-meta.xml
<CustomField>
    <fullName>ConnectionFeeInterfaceChange__c</fullName>
    <label>Connection Fee: Interface Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>