force-app/main/default/objects/Contract/fields/ConnectionFeeInterfaceChangeCharged__c.field-meta.xml
<CustomField>
    <fullName>ConnectionFeeInterfaceChangeCharged__c</fullName>
    <label>Connection Fee: Interface Change Charged</label>
    <type>Date</type>
</CustomField>