force-app/main/default/objects/Contract/fields/ConnectionType__c.field-meta.xml
<CustomField>
    <fullName>ConnectionType__c</fullName>
    <label>Connection Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Mirakl Connect</fullName>
            </value>
            <value>
                <fullName>UI Manual</fullName>
            </value>
            <value>
                <fullName>ChannelEngine</fullName>
            </value>
            <value>
                <fullName>Tradebyte</fullName>
            </value>
            <value>
                <fullName>plentymarkets</fullName>
                <label>PlentyONE</label>
            </value>
            <value>
                <fullName>JLT</fullName>
                <label>JTL</label>
            </value>
            <value>
                <fullName>Novomind</fullName>
            </value>
            <value>
                <fullName>irisOne</fullName>
            </value>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Channelpilot</fullName>
            </value>
            <value>
                <fullName>limango</fullName>
                <label>CSV</label>
            </value>
            <value>
                <fullName>ChannelAdvisor</fullName>
            </value>
            <value>
                <fullName>Billbee</fullName>
            </value>
            <value>
                <fullName>eCommeleon</fullName>
            </value>
            <value>
                <fullName>Giftcard</fullName>
            </value>
            <value>
                <fullName>hybrid-csv-plus-xml</fullName>
                <label>Hybrid (CSV+XML)</label>
            </value>
            <value>
                <fullName>HybridMcXml</fullName>
                <label>Hybrid (MC+XML)</label>
            </value>
            <value>
                <fullName>merchant-center</fullName>
                <label>Merchant Center</label>
            </value>
            <value>
                <fullName>nMedia</fullName>
            </value>
            <value>
                <fullName>shoppingfeed</fullName>
            </value>
            <value>
                <fullName>Shopware</fullName>
            </value>
            <value>
                <fullName>Synesty</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>limango-xml</fullName>
                <label>XML</label>
            </value>
            <value>
                <fullName>Brickfox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>