force-app/main/default/objects/Contract/fields/ContractAdjustments__c.field-meta.xml
<CustomField>
    <fullName>ContractAdjustments__c</fullName>
    <label>Contract adjustments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>