force-app/main/default/objects/Contract/fields/ContractSent__c.field-meta.xml
<CustomField>
    <fullName>ContractSent__c</fullName>
    <label>Contract sent</label>
    <type>Date</type>
</CustomField>