force-app/main/default/objects/Contract/fields/ContractSigned__c.field-meta.xml
<CustomField>
    <fullName>ContractSigned__c</fullName>
    <label>Contract signed</label>
    <type>Date</type>
</CustomField>