force-app/main/default/objects/Contract/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>Preemption</fullName>
            </value>
            <value>
                <fullName>BlockPreemption</fullName>
                <label>Block &amp; Preemption</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>