force-app/main/default/objects/Contract/fields/ContractualAmendment__c.field-meta.xml
<CustomField>
    <fullName>ContractualAmendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contractual Amendment</label>
    <type>Checkbox</type>
</CustomField>