force-app/main/default/objects/Contract/fields/ContractVisiblityCriteria__c.field-meta.xml
<CustomField>
    <fullName>ContractVisiblityCriteria__c</fullName>
    <description>Field needed to build restriction rules</description>
    <label>Contract Visiblity Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>