force-app/main/default/objects/Contract/fields/DeliverynoteInThePackage__c.field-meta.xml
<CustomField>
    <fullName>DeliverynoteInThePackage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deliverynote in the package</label>
    <type>Checkbox</type>
</CustomField>