force-app/main/default/objects/Contract/fields/DeliveryPickup__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPickup__c</fullName>
    <label>Delivery / Pickup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PickUpFromSupplier</fullName>
                <label>Pick-Up from Supplier</label>
            </value>
            <value>
                <fullName>DeliveryToGoleniow</fullName>
                <label>Delivery to Goleniow</label>
            </value>
            <value>
                <fullName>DeliveryToBerlin</fullName>
                <label>Delivery to Berlin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>