force-app/main/default/objects/Contract/fields/FixedBonus__c.field-meta.xml
<CustomField>
    <fullName>FixedBonus__c</fullName>
    <label>Fixed bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>