force-app/main/default/objects/Contract/fields/FixedBonusInPercent__c.field-meta.xml
<CustomField>
    <fullName>FixedBonusInPercent__c</fullName>
    <label>Fixed bonus in %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>