force-app/main/default/objects/Contract/fields/FixedContribution__c.field-meta.xml
<CustomField>
    <fullName>FixedContribution__c</fullName>
    <label>Fixed contribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>