force-app/main/default/objects/Contract/fields/Free_Shipping_AT__c.field-meta.xml
<CustomField>
    <fullName>Free_Shipping_AT__c</fullName>
    <label>Free Shipping AT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>