force-app/main/default/objects/Contract/fields/FreeShippingLimitPL__c.field-meta.xml
<CustomField>
    <fullName>FreeShippingLimitPL__c</fullName>
    <label>Free Shipping Limit PL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FreeShippingLimit</valueSetName>
    </valueSet>
</CustomField>