force-app/main/default/objects/Contract/fields/Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment__c</fullName>
    <description>Service provider who carries out the shipping process for the partner</description>
    <inlineHelpText>Service provider who carries out the shipping process for the partner</inlineHelpText>
    <label>Fulfillment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zeos</fullName>
                <label>ZEOS</label>
            </value>
            <value>
                <fullName>Ayf</fullName>
                <label>AYF</label>
            </value>
            <value>
                <fullName>GuteMarken</fullName>
                <label>Gute Marken</label>
            </value>
            <value>
                <fullName>Gojungo</fullName>
                <label>gojungo</label>
            </value>
            <value>
                <fullName>Heyconnect</fullName>
                <label>heyconnect</label>
            </value>
            <value>
                <fullName>Onquality</fullName>
                <label>onquality</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>