force-app/main/default/objects/Contract/fields/InfoAboutContract__c.field-meta.xml
<CustomField>
    <fullName>InfoAboutContract__c</fullName>
    <label>Info about contract</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>