force-app/main/default/objects/Contract/fields/IntegrationAgency__c.field-meta.xml
<CustomField>
    <fullName>IntegrationAgency__c</fullName>
    <description>Does an agency take over the integration for the partner?</description>
    <inlineHelpText>Does an agency take over the integration for the partner?</inlineHelpText>
    <label>Integration Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>