force-app/main/default/objects/Contract/fields/InvoiceDiscount__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDiscount__c</fullName>
    <label>Invoice discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>