force-app/main/default/objects/Contract/fields/LimangoCeoSign__c.field-meta.xml
<CustomField>
    <fullName>LimangoCeoSign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Limango CEO (sign)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContractsLimangoCeoSign</relationshipName>
    <type>Lookup</type>
</CustomField>