force-app/main/default/objects/Contract/fields/LimangoHeadOfPurchasingSign__c.field-meta.xml
<CustomField>
    <fullName>LimangoHeadOfPurchasingSign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Limango Head of Purchasing (sign)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContractsLimangoHeadOfPurchasingSign</relationshipName>
    <type>Lookup</type>
</CustomField>