force-app/main/default/objects/Contract/fields/LimangoPurchaserSign__c.field-meta.xml
<CustomField>
    <fullName>LimangoPurchaserSign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Limango purchaser (sign)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContractsLimangoPurchaserSign</relationshipName>
    <type>Lookup</type>
</CustomField>