force-app/main/default/objects/Contract/fields/LimangoTlCoordinatorConfirm__c.field-meta.xml
<CustomField>
    <fullName>LimangoTlCoordinatorConfirm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Limango TL/ Coordinator (confirm)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContractsLimangoTlCoordinatorConfirm</relationshipName>
    <type>Lookup</type>
</CustomField>