force-app/main/default/objects/Contract/fields/MasterAgreement__c.field-meta.xml
<CustomField>
    <fullName>MasterAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Agreement</label>
    <type>Checkbox</type>
</CustomField>