force-app/main/default/objects/Contract/fields/MasterPurchaseAgreement__c.field-meta.xml
<CustomField>
    <fullName>MasterPurchaseAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Purchase Agreement</label>
    <type>Checkbox</type>
</CustomField>