force-app/main/default/objects/Contract/fields/Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fee__c</fullName>
    <label>Monthly Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>noMonthlyFee</fullName>
                <label>no monthly fee</label>
            </value>
            <value>
                <fullName>29,00 €</fullName>
                <default>true</default>
                <label>29,00 €</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>