force-app/main/default/objects/Contract/fields/Monthly_Premium_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Premium_Fee__c</fullName>
    <label>Monthly Premium Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no premium support</fullName>
                <default>true</default>
                <label>no premium support</label>
            </value>
            <value>
                <fullName>59,00 €</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>