force-app/main/default/objects/Contract/fields/NoshipThreshold__c.field-meta.xml
<CustomField>
    <fullName>NoshipThreshold__c</fullName>
    <label>noship threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>