force-app/main/default/objects/Contract/fields/of_which_SPA__c.field-meta.xml
<CustomField>
    <fullName>of_which_SPA__c</fullName>
    <description>Field required for AdSales so that they can enter how much of the budget from the contract was spent on SPA.</description>
    <label>of which SPA</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>