force-app/main/default/objects/Contract/fields/PaymentTermDueDateForNetPayment__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermDueDateForNetPayment__c</fullName>
    <label>Payment term/due date for net payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>