force-app/main/default/objects/Contract/fields/Premium_support_start_date__c.field-meta.xml
<CustomField>
    <fullName>Premium_support_start_date__c</fullName>
    <label>Premium support start date</label>
    <type>Date</type>
</CustomField>