force-app/main/default/objects/Contract/fields/ReturnCollection__c.field-meta.xml
<CustomField>
    <fullName>ReturnCollection__c</fullName>
    <label>Return collection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>48h</fullName>
                <default>true</default>
                <label>48h</label>
            </value>
            <value>
                <fullName>72h</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>