force-app/main/default/objects/Contract/fields/ReturnQuantity__c.field-meta.xml
<CustomField>
    <fullName>ReturnQuantity__c</fullName>
    <label>Return quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>