force-app/main/default/objects/Contract/fields/ReturnsToManufacturer__c.field-meta.xml
<CustomField>
    <fullName>ReturnsToManufacturer__c</fullName>
    <label>Returns to Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>