force-app/main/default/objects/Contract/fields/SharedCost__c.field-meta.xml
<CustomField>
    <fullName>SharedCost__c</fullName>
    <label>Shared Cost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>