force-app/main/default/objects/Contract/fields/ShippingCostsAt__c.field-meta.xml
<CustomField>
    <fullName>ShippingCostsAt__c</fullName>
    <label>Shipping costs AT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ShippingCosts</valueSetName>
    </valueSet>
</CustomField>