force-app/main/default/objects/Contract/fields/ShippingCostsPL__c.field-meta.xml
<CustomField>
    <fullName>ShippingCostsPL__c</fullName>
    <label>Shipping Costs PL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ShippingCosts</valueSetName>
    </valueSet>
</CustomField>