force-app/main/default/objects/Contract/fields/ShippingCostsTwoManHandling__c.field-meta.xml
<CustomField>
    <fullName>ShippingCostsTwoManHandling__c</fullName>
    <label>Shipping costs TwoManHandling (DE)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FreeShipping</fullName>
                <label>Free shipping</label>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>