force-app/main/default/objects/Contract/fields/ShippingCostsXCountry__c.field-meta.xml
<CustomField>
    <fullName>ShippingCostsXCountry__c</fullName>
    <label>Shipping costs X country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ShippingCosts</valueSetName>
    </valueSet>
</CustomField>