force-app/main/default/objects/Contract/fields/Sla__c.field-meta.xml
<CustomField>
    <fullName>Sla__c</fullName>
    <label>SLA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>