force-app/main/default/objects/Contract/fields/StatusAnnualContract__c.field-meta.xml
<CustomField>
    <fullName>StatusAnnualContract__c</fullName>
    <label>Status annual contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacted</fullName>
                <label>contacted</label>
            </value>
            <value>
                <fullName>Forecast</fullName>
            </value>
            <value>
                <fullName>InDiscussion</fullName>
                <label>in discussion</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>rejected</label>
            </value>
            <value>
                <fullName>Signed</fullName>
                <label>signed</label>
            </value>
            <value>
                <fullName>Tbd</fullName>
                <label>tbd</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>