force-app/main/default/objects/Contract/fields/SupplierContact1Sign__c.field-meta.xml
<CustomField>
    <fullName>SupplierContact1Sign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier contact 1 (sign)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Supplier contact 1 (sign)</relationshipLabel>
    <relationshipName>ContractsSupplierContact1Sign</relationshipName>
    <type>Lookup</type>
</CustomField>