force-app/main/default/objects/Contract/fields/SupplierContact2Sign__c.field-meta.xml
<CustomField>
    <fullName>SupplierContact2Sign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier contact 2 (sign)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Supplier contact 2 (sign))</relationshipLabel>
    <relationshipName>ContractsSupplierContact2Sign</relationshipName>
    <type>Lookup</type>
</CustomField>