force-app/main/default/objects/Contract/fields/SupplierId__c.field-meta.xml
<CustomField>
    <fullName>SupplierId__c</fullName>
    <externalId>true</externalId>
    <label>Supplier ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>