force-app/main/default/objects/Contract/fields/TermOfPayment__c.field-meta.xml
<CustomField>
    <fullName>TermOfPayment__c</fullName>
    <label>Term of payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20Days</fullName>
                <label>20 days</label>
            </value>
            <value>
                <fullName>30Days</fullName>
                <label>30 days</label>
            </value>
            <value>
                <fullName>45Days</fullName>
                <default>true</default>
                <label>45 days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>