force-app/main/default/objects/Contract/fields/TwoManHandling__c.field-meta.xml
<CustomField>
    <fullName>TwoManHandling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TwoManHandling (DE)</label>
    <type>Checkbox</type>
</CustomField>