force-app/main/default/objects/Contract/fields/TypeOfContract__c.field-meta.xml
<CustomField>
    <fullName>TypeOfContract__c</fullName>
    <label>Type of contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AnnualContract</fullName>
                <label>Annual contract</label>
            </value>
            <value>
                <fullName>SingleBooking</fullName>
                <label>Single booking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>