force-app/main/default/objects/Contract/fields/WarehouseShippingDe__c.field-meta.xml
<CustomField>
    <fullName>WarehouseShippingDe__c</fullName>
    <label>Warehouse (shipping DE)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CommercialCountry</valueSetName>
    </valueSet>
</CustomField>