force-app/main/default/objects/Contract/fields/WarehouseShippingOtherCountry__c.field-meta.xml
<CustomField>
    <fullName>WarehouseShippingOtherCountry__c</fullName>
    <label>Warehouse (shipping other country)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CommercialCountry</valueSetName>
    </valueSet>
</CustomField>