force-app/main/default/objects/Contract/fields/WarehouseshippingPL__c.field-meta.xml
<CustomField>
    <fullName>WarehouseshippingPL__c</fullName>
    <label>Warehouse (shipping PL)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CommercialCountry</valueSetName>
    </valueSet>
</CustomField>