force-app/main/default/objects/Contract/fields/X1UpToKEuros__c.field-meta.xml
<CustomField>
    <fullName>X1UpToKEuros__c</fullName>
    <inlineHelpText>Graduated bonus based on annual sales</inlineHelpText>
    <label>1. Up to k Euros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>