force-app/main/default/objects/Contract/fields/X2mh_Free_Shipping_Limit_PL__c.field-meta.xml
<CustomField>
    <fullName>X2mh_Free_Shipping_Limit_PL__c</fullName>
    <label>2mh Free Shipping Limit PL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>