force-app/main/default/objects/Contract/fields/X2mh_Shipping_cost_AT__c.field-meta.xml
<CustomField>
    <fullName>X2mh_Shipping_cost_AT__c</fullName>
    <label>2mh Shipping cost AT</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>