force-app/main/default/objects/Contract/fields/XPercentOnInvoiceValue__c.field-meta.xml
<CustomField>
    <fullName>XPercentOnInvoiceValue__c</fullName>
    <label>X% on invoice value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>